--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-web:2.6.4'
         implementation 'org.springframework.boot:spring-boot-autoconfigure:2.6.4'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.4'
+        implementation 'org.springframework.boot:spring-boot-starter-security:2.6.4'
+        implementation 'org.springframework.security:spring-security-core:5.6.2'
         implementation 'jstl:jstl:1.2'
         compileOnly 'org.projectlombok:lombok:1.18.22'
         implementation 'javax.xml.bind:jaxb-api:2.2.4'
